# engram

./: .commit-msg.tmp  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  TESTING.md  THIRD_PARTY_LICENSES.md  docker-compose.yml  index.html  mkdocs.yml  objects.inv  package-lock.json  sitemap.xml  tests.txt
backend/: .env.example  engram.spec  pyproject.toml  pytest.ini  run.py
backend/.hypothesis/constants/: 18147316a70ef0e5  19c7357f50a09234  19d64f73cb24dcd1  19f733f25d936e66  1e75d4b0fa955e49  202ef8445106f85a  20490c5043ab7527  21eaf73ba6faeca0  24b1281476c23835  2e37f8986db00793  3019e1195f0ba4da  3216926e57f24d55  369fd8488262fe56  407e7b114e6b0c1c  (+33 more)
backend/app/: __init__.py  config.py  database.py  main.py
backend/migrations/: env.py
backend/scripts/: .gitignore  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  ab_accuracy.py  audit_subtitle_cache.py  build_subtitle_cache.py  contributors.py  curated_shows.txt  download_expanse_subs.py  extract_changelog.py  fetch_fpcalc.py  ground_truth.json  ground_truth_template.py  jetson_gpu_setup.sh  matching_test_bench.py  migrate_db.py  migrate_db_match_details.py  migrate_subtitle_cache_keys.py  normalize_subtitle_cache.py  pack_subtitle_cache.py  read_log_tail.py  reset_db.py  run_bench.py  test_matching_accuracy.py  transcript_matching.py  validate_subtitle_cache.py  verify_cache_content.py  verify_episode_labels.py  verify_matcher_port.py
backend/tests/: __init__.py  conftest.py  pytest.ini  repro_classification.py  test_conflict_logic.py
(+820 files in other folders)
