[project]
name = "engram-backend"
version = "0.1.9"
description = "Engram - Disc ripping and media organization backend"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlmodel>=0.0.14",
    "aiosqlite>=0.19.0",
    "pywin32>=306; sys_platform == 'win32'",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.1.0",
    "websockets>=12.0",
    "beautifulsoup4>=4.12.0",
    "psutil>=5.9.0",
    "faster-whisper>=1.0.0",
    "chardet>=5.2.0",
    "rapidfuzz>=3.6.0",
    "ctranslate2>=4.0.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "loguru>=0.7.0",
    "rich>=13.7.0",
    "librosa>=0.10.1",
    "soundfile>=0.12.1",
]

[project.optional-dependencies]
gpu = [
    "nvidia-cudnn-cu12[nvidia-cublas-cu12]>=9.19.0.56",
    "gputil>=1.4.0",
]
dev = [
    "pandas>=3.0.0",
    "ipykernel>=7.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.26.0",
    "ruff>=0.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # Line length handled by ruff format; remaining E501 are strings/comments

[tool.ruff.lint.per-file-ignores]
"app/api/routes.py" = ["B008"]
"app/api/test_routes.py" = ["B008"]
"scripts/*.py" = ["E402", "E722", "E741"]

[tool.ruff.format]
quote-style = "double"
